# BE

./: .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: deploy.yaml
schema/: captcha.py
src/: main.py
src/mlruns/0/: meta.yaml
src/models/: __init__.py
src/routers/: captcha.py  image_dataset.py  model.py
src/schemas/: captcha.py
src/utils/: id_gen.py  image_label_store.py  image_processing.py  model_loader.py  store.py
utils/: id_gen.py
