[project]
name = "doez-be"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.11",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "pillow>=11.1.0",
    "pydantic>=2.10.6",
    "python-multipart>=0.0.20",
    "torchvision>=0.21.0",
    "uvicorn>=0.34.0",
]


[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
