[project]
name = "doez-be"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "black>=25.1.0",
    "dotenv>=0.9.9",
    "fastapi>=0.115.11",
    "flake8>=7.2.0",
    "httpx>=0.28.1",
    "isort>=6.0.1",
    "itsdangerous>=2.2.0",
    "pillow>=11.2.1",
    "pydantic>=2.10.6",
    "python-multipart>=0.0.20",
    "routers>=0.10.1",
    "starlette-exporter>=0.23.0",
    "torchvision>=0.22.0",
    "uvicorn>=0.34.0",
]


[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
